--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -76,7 +76,7 @@ a {
     font-size: 18px;
 }
 
-@media (min-width:1000px) {
+@media (min-width:700px) {
     .hamburger {
         display: none;
     }
@@ -89,6 +89,7 @@ a {
     .logo {
         font-size: 48px;
         margin-left: 20px;
+        font-weight: 600;
     }
 
     .nav-menu {
