--- a/styles/components/_utils.scss
+++ b/styles/components/_utils.scss
@@ -5,3 +5,13 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+main {
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #2B2E4A;
+}
