--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -27,3 +27,25 @@ p {
         font-size: 16px;
     }
 }
+
+@media (min-width:700px) {
+    h1 {
+        font-size: 48px;
+    }
+
+    p {
+        width: 500px;
+        font-size: 20px;
+    }
+}
+
+@media (min-width:850px) {
+    h1 {
+        font-size: 58px;
+    }
+
+    p {
+        width: 650px;
+        font-size: 22px;
+    }
+}
