--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -5,6 +5,7 @@
 
 h1 {
     font-size: 38px;
+    margin-top: 24px;
 }
 
 p {
@@ -19,7 +20,7 @@ p {
     background-color: #2B2E4A;
     border: none;
     border-radius: 5px;
-    margin-top: 16px;
+    margin: 24px 0;
     .resume-txt {
         text-decoration: none;
         color: #ffffff;
