--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -10,6 +10,9 @@ footer {
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 8px 20px 0px rgba(0,0,0,0.75);
+    background-color: #fff;
+    width: 100vw;
+
 }
 
 .email {
@@ -33,7 +36,7 @@ footer {
 
 @media (min-width:1000px) {
     footer {
-        height: 7rem;
+        height: 5rem;
     }
 
     .email {
