--- a/styles/components/_utils.scss
+++ b/styles/components/_utils.scss
@@ -1,13 +1,14 @@
 body {
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 main {
-    height: 80vh;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
