--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -1,19 +1,24 @@
+// see index.scss for comments on import tags
 @import "../defaults/colors";
 @import "../components/header";
 @import "../components/footer";
 @import "../components/utils";
 
+// Styling for title of page
+// Font sizes in responsive units of measurement
 h1 {
-    font-size: 38px;
+    font-size: 2.3rem;
     margin-top: 24px;
 }
 
+// Styling for information under the title of page
 p {
-    width: 292px;
+    width: 60vw;
     margin: 16px;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
+// styling for button linking to resume
 .resume-btn {
     width: 197px;
     height: 57px;
@@ -31,22 +36,23 @@ p {
 
 @media (min-width:700px) {
     h1 {
-        font-size: 48px;
+        font-size: 3rem;
     }
 
     p {
         width: 500px;
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 }
 
 @media (min-width:850px) {
     h1 {
-        font-size: 58px;
+        font-size: 4rem;
     }
 
+    // width for text set with a static unit of measurement as text would be stretched too thin with wider screen sizes
     p {
         width: 650px;
-        font-size: 22px;
+        font-size: 1.35rem;
     }
 }
