--- a/styles/pages/blog-main.scss
+++ b/styles/pages/blog-main.scss
@@ -1,26 +1,31 @@
+// see index.scss for comments on import tags
 @import "../defaults/colors";
 @import "../components/header";
 @import "../components/footer";
 @import "../components/utils";
 
+// styling for blog images using responsive units of measurement so they are responsive depending on mobile screen sizes
 img {
-    width: 45vw;
+    width: 55vw;
     height: 15vh;
     margin: 16px 0 8px;
 }
 
+// styling for the text in blog cards as the cards are wrapped in a link tag
 a {
-    text-decoration: none;
     color: #2B2E4A;
 }
 
+// margin for blog cards so that cards have a gap between each other and the header and footer
 .container {
     margin: 16px;
 }
 
+// Styling for blog post card
+// flexbox has been used for styling for ease of centreing of all items in blog post card
 .blog-post {
-    width: 55vw;
-    height: 30vh;
+    width: 70vw;
+    height: 32vh;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -28,25 +33,26 @@ a {
     align-items: center;
 }
 
+// styling for blog post title
 .blog-title {
-    font-size: 18px;
+    font-size: 1.2rem;
     text-decoration: underline;
 }
 
+// styling for brief blog post info
 .blog-description {
     width: 45vw;
+    margin-bottom: 8px;
 }
 
+// styling for tablets
 @media (min-width:700px) {
+    // CSS grid has been used to place blog post cards in 2 columns
+    // place-items has been used to centre cards in cell
     main {
         display: grid;
         grid-template-columns: 1fr 1fr;
-    }
-
-    .container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        place-items: center;
     }
 
     img {
@@ -57,7 +63,7 @@ a {
 
     .blog-post {
         width: 30vw;
-        height: 26vh;
+        height: 28vh;
     }
 
     .blog-description {
@@ -65,9 +71,12 @@ a {
     }
 }
 
+// styling for desktops
 @media (min-width:1000px) {
+    // a 2x6 grid has been used for styling as the styling used when five posts are placed in a 2x3 grid wasn't desired
     main {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr 1fr;
     }
     .container {
         margin: 8px;
@@ -77,12 +86,40 @@ a {
         height: 15vh;
     }
 
-    .blog-post {
-        width: 25vw;
-        height: 30vh;
-    }
-
     .blog-description {
         width: 20vw;
+    }
+
+    .blog-post {
+        width: 25vw;
+        height: 33vh;
+    }
+
+    // styling for placement of individual blog posts
+    // posts stretch over two columns
+    // having 6 columns allows for the posts on the bottom row to be placed asymmetrically to the top row which is a better looking design when compared with having a 2x6 grid
+    .container-1 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .container-2 {
+        grid-column: 3 / 5;
+        grid-row: 1 / 2;
+    }
+
+    .container-3 {
+        grid-column: 5 / 7;
+        grid-row: 1 / 2;
+    }
+
+    .container-4 {
+        grid-column: -6 / -4;
+        grid-row: 2 / 3;
+    }
+
+    .container-5 {
+        grid-column: -4 / -2;
+        grid-row: 2 / 3;
     }
 }
