updated sizing for submit button

--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -101,5 +101,8 @@ p {
         textarea {
             width: 37vw;
         }
+        .submit-btn {
+            height: 72px;
+        }
     }
 }
